--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
 @font-face {
 
 	 font-family: 'Raslani Undaground';
-	 src: url('assets/fonts/Raslani Undaground.ttf'),format('truetype');
+	 src: url('../fonts/Raslani Undaground.ttf'),format('truetype');
 	 font-weight: normal;
      font-style: normal;
 }
@@ -11,7 +11,7 @@
 @font-face {
 
 	 font-family: 'Over';
-	 src: url('assets/fonts/Over.ttf'),format('truetype');
+	 src: url('../fonts/Over.ttf'),format('truetype');
 	 font-weight: normal;
      font-style: normal;
 }
@@ -31,7 +31,7 @@ body{
 
 h1, h2, h3, h4, h5 ,h6{
     color: #626262;
-    font-family: "opensans-regular", arial;
+    font-family: "Over", arial;
     letter-spacing: 1px;
 }
 
@@ -56,6 +56,10 @@ h5, h6          { font-weight: bolder }
     *zoom: 1;  
 }
 
+
+
+
+
 /*  header  */
 header{
     width: 100%;
@@ -65,7 +69,7 @@ header{
 }
 
 header .header_logo{
-    margin-top: 40px;
+    margin-top: 1px;
     float: left;
 }
 
@@ -213,7 +217,36 @@ header .hamburger.active .left{
     -o-transform:rotate(-45deg);
 }
 
+/*  billboard  */
+.billboard{
+    width: 100%;
+    height: 680px;
+    background: url('../images/billboard.jpg') no-repeat;
+    background-position: cover;
+    -webkit-background-position: cover;
+    -moz-background-position: cover;
+    -o-background-position: cover;
+    overflow: hidden;
+    position: relative;
+    z-index: 5555;
+}
 
+.billboard .caption h2{
+    color: #525252;
+    font-family: "Overheader_logo-semibold", arial;
+    font-size: 80px;
+    font-weight: bold;
+    margin: 0;
+    text-align: center;
+    margin-top: 200px;
+}
+
+.billboard .scroll{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    margin-left: -12px;
+}
 
 
 
