--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -241,3 +241,50 @@ header .hamburger.active .left{
     margin-top: 200px;
 }
 
+
+/*  services  */
+.Introduction{
+    width: 100%;
+    overflow: hidden;
+    padding: 140px 0;
+}
+
+.Introduction article{
+    display: block;
+    width: 313px;
+    float: left;
+    margin-right: 80px;
+}
+
+.Introduction article:last-child{
+    margin-right: 0;
+}
+
+.Introduction article .Introduction_icon{
+    width: 48px;
+    margin-right: 30px;
+    float: left;
+}
+
+.Introduction article .Introduction_info{
+    width: 235px;
+    float: right;
+}
+
+.Introduction article .Introduction_info h3{
+    margin: 0 0 40px 0;
+    color: #535353;
+    font-family: "opensans-bold", arial;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    line-height: 26px;
+}
+
+.Introduction article p.Introduction_desc{
+    color: #797878;
+    font-family: "opensans-regular", arial;
+    font-size: 14px;
+    line-height: 24px;
+}
