--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -432,7 +432,7 @@ header .hamburger.active .left{
     width: 100%;
     height: 155px;
     list-style: none;
-    background: url('../img/shadow.png');
+    background: url('../images/shadow.png');
     background-repeat: repeat-x;
     background-position: 0 0;
     position: absolute;
@@ -512,7 +512,7 @@ header .hamburger.active .left{
 }
 
 .folio_wrapper ol.flex-control-paging li a.flex-active{
-    background: url('../img/slider_nav_active.png') no-repeat;
+    background: url('../images/slider_nav_active.png') no-repeat;
 }
 
 .Gallery .folio_wrapper ul li{
@@ -547,7 +547,7 @@ header .hamburger.active .left{
     display: block;
     width: 10px;
     height: 10px;
-    background: url('../img/slider_nav_inactive.png') no-repeat;
+    background: url('../images/slider_nav_inactive.png') no-repeat;
     overflow: hidden;
     text-indent: -5555px;
 
