--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,10 +68,6 @@ header{
     overflow: hidden;
 }
 
-header .header_logo{
-    margin-top: 1px;
-    float: left;
-}
 
 header.header_fixed{
     position: fixed;
@@ -164,14 +160,27 @@ header.header_fixed nav ul li a{
 }
 #menu{
 	position:fixed;
-	top:5%;
-	left:40%;
-	height: 40px;
+	top:0%;
+	left:0;
+	height: 60px;
 	z-index: 70;
 	width: 100%;
 	padding: 0;
 	margin:0;
+	background: red;
+
 }
+/*#menus{
+	width: 100px;
+    height: 100px;
+    background: red;
+    -webkit-transition: width 2s;
+    transition: width 2s;
+}
+
+#menus:hover {
+    width: 100%;
+}*/
 
 #infoMenu{
 	height: 20px;
