--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,48 @@
+/*  Fonts  */
+@font-face {
+    font-family: 'opensans-regular';
+    src: url('../fonts/opensans-regular.eot');
+    src: url('../fonts/opensans-regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans-regular.woff') format('woff'),
+         url('../fonts/opensans-regular.ttf') format('truetype'),
+         url('../fonts/opensans-regular.svg#opensans-regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'opensans-bold';
+    src: url('../fonts/opensans-bold.eot');
+    src: url('../fonts/opensans-bold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans-bold.woff') format('woff'),
+         url('../fonts/opensans-bold.ttf') format('truetype'),
+         url('../fonts/opensans-bold.svg#opensans-bold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'opensans-semibold';
+    src: url('../fonts/opensans-semibold.eot');
+    src: url('../fonts/opensans-semibold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/opensans-semibold.woff') format('woff'),
+         url('../fonts/opensans-semibold.ttf') format('truetype'),
+         url('../fonts/opensans-semibold.svg#opensans-semibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'honeyscript-semibold';
+    src: url('../fonts/honeyscript-semibold.eot');
+    src: url('../fonts/honeyscript-semibold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/honeyscript-semibold.woff') format('woff'),
+         url('../fonts/honeyscript-semibold.ttf') format('truetype'),
+         url('../fonts/honeyscript-semibold.svg#honeyscript-semibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 @font-face {
 
@@ -393,7 +438,7 @@ header.header_fixed nav ul li a,
     width: 100%;
     height: 155px;
     list-style: none;
-    background: url('assets/images/shadow.png');
+    background: url('../images/shadow.png');
     background-repeat: repeat-x;
     background-position: 0 0;
     position: absolute;
@@ -401,7 +446,6 @@ header.header_fixed nav ul li a,
     bottom: 0;
     left: 0;
     opacity: 0;
-
     transition:all .2s linear;
     -webkit-transition:all .2s linear;
     -moz-transition:all .2s linear;
@@ -417,7 +461,6 @@ header.header_fixed nav ul li a,
     bottom: 30px;
     left: 20px;
     opacity: 0;
-
     transition:all .2s linear;
     -webkit-transition:all .2s linear;
     -moz-transition:all .2s linear;
@@ -473,7 +516,7 @@ header.header_fixed nav ul li a,
 }
 
 .folio_wrapper ol.flex-control-paging li a.flex-active{
-    background: url('assets/images/slider_nav_active.png') no-repeat;
+    background: url('../images/slider_nav_active.png') no-repeat;
 }
 
 .portfolio .folio_wrapper ul li{
@@ -508,10 +551,9 @@ header.header_fixed nav ul li a,
     display: block;
     width: 10px;
     height: 10px;
-    background: url('assets/images/slider_nav_inactive.png') no-repeat;
+    background: url('../images/slider_nav_inactive.png') no-repeat;
     overflow: hidden;
     text-indent: -5555px;
-
     transition:all .2s linear;
     -webkit-transition:all .2s linear;
     -moz-transition:all .2s linear;
