--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,7 +179,7 @@ header.header_fixed nav ul li a,
 	width: 100%;
 	padding: 0;
 	margin:0;
-	background: red;
+	background: #6495ed;
 
 }
 /*#menus{
@@ -253,47 +253,7 @@ header.header_fixed nav ul li a,
     width: 100%;
     overflow: hidden;
     padding: 140px 0;
-}
-
-.Introduction article{
-    display: block;
-    width: 313px;
-    float: left;
-    margin-right: 80px;
-}
-
-.Introduction article:last-child{
-    margin-right: 0;
-}
-
-.Introduction article .Introduction_icon{
-    width: 48px;
-    margin-right: 30px;
-    float: left;
-}
-
-.Introduction article .Introduction_info{
-    width: 235px;
-    float: right;
-}
-
-.Introduction article .Introduction_info h3{
-    margin: 0 0 40px 0;
-    color: #535353;
-    font-family: "Raslani Undaground", arial;
-    float:center;
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 0;
-    line-height: 26px;
-}
-
-.Introduction article p.Introduction_desc{
-    color: #797878;
-    font-family: "Overheader_logo-semibold", arial;
-    font-size: 14px;
-    line-height: 24px;
+    text-align: center;
 }
 
 
@@ -411,11 +371,14 @@ header.header_fixed nav ul li a,
 
 
 
+
+
 /*  Asspirations  */
 .Asspirations{
     padding: 140px 0;
     overflow: hidden;
     background: #fafafa;
+    text-align: center;
 }
 
 .Asspirations .Asspirations_wrapper{
@@ -431,44 +394,79 @@ header.header_fixed nav ul li a,
     text-align: center;
 }
 
-.Asspirations .Asspirations_wrapper article:last-child{
-    margin-right: 0;
+.Asspirations .skillbar {
+	position:relative;
+	display:block;
+	margin-bottom:15px;
+	width:100%;
+	background:#eee;
+	height:35px;
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	-webkit-transition:0.4s linear;
+	-moz-transition:0.4s linear;
+	-ms-transition:0.4s linear;
+	-o-transition:0.4s linear;
+	transition:0.4s linear;
+	-webkit-transition-property:width, background-color;
+	-moz-transition-property:width, background-color;
+	-ms-transition-property:width, background-color;
+	-o-transition-property:width, background-color;
+	transition-property:width, background-color;
 }
 
-.Asspirations .Asspirations_wrapper article .author{
-    margin: 20px 0 0 0;
-    color: #666;
-    font-family: "opensans-semibold", arial;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
+.Asspirations .skillbar-title {
+	position:absolute;
+	top:0;
+	left:0;
+width:110px;
+	font-weight:bold;
+	font-size:13px;
+	color:#ffffff;
+	background:#6adcfa;
+	-webkit-border-top-left-radius:3px;
+	-webkit-border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:3px;
+	-moz-border-radius-bottomleft:3px;
+	border-top-left-radius:3px;
+	border-bottom-left-radius:3px;
 }
 
-.Asspirations .Asspirations .testimonial{
-    padding: 46px 20px;
-    border: 1px solid #e3e3e3;
-    position: relative;
-    margin-top: 60px;
+.Asspirations .skillbar-title span {
+	display:block;
+	background:rgba(0, 0, 0, 0.1);
+	padding:0 20px;
+	height:35px;
+	line-height:35px;
+	-webkit-border-top-left-radius:3px;
+	-webkit-border-bottom-left-radius:3px;
+	-moz-border-radius-topleft:3px;
+	-moz-border-radius-bottomleft:3px;
+	border-top-left-radius:3px;
+	border-bottom-left-radius:3px;
 }
 
-.Asspirations .Asspirations .testimonial .arrow{
-    display: inline-block;
-    width: 13px;
-    height: 9px;
-    background: url('../images/testimonial_arrow.png') no-repeat;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    margin-left: -6px;
-    margin-top: -7px;
+.Asspirations .skillbar-bar {
+	height:35px;
+	width:0px;
+	background:#6adcfa;
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
 }
 
-.Asspirations .Asspirations .testimonial p{
-    color: #797979;
-    font-family: "opensans-regular", arial;
-    font-size: 14px;
-    line-height: 28px;
+.Asspirations .skill-bar-percent {
+	position:absolute;
+	right:10px;
+	top:0;
+	font-size:11px;
+	height:35px;
+	line-height:35px;
+	color:#ffffff;
+	color:rgba(0, 0, 0, 0.4);
 }
+
 
 /**  contact  **/
 .Contact{
