--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -511,11 +511,13 @@ width:110px;
     background: #797979;
     margin: 60px auto; 
 }
+#links{
+	padding: 0 40%;
+	left: 40%;
+}
 #links a{
-	margin: 0;
-    padding: 0;
-    font-size: 72%;
-    vertical-align: baseline;
+	margin: 10px;
+    float: left;
 
 }
 
